fix the bug in styling(I was giving it z-index -1 incorreclty so the hover on mask dident work so delete the z-index -1)

--- a/src/Resources/Css/main.css
+++ b/src/Resources/Css/main.css
@@ -1,7 +1,6 @@
 .main {
   padding: 20px 15px;
   position: relative;
-  z-index: -1;
 }
 
 .featured__title {
